<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/welcome_message"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnRus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:text="Russian"/>

        <Button
            android:id="@+id/btnEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:text="English"/>

        <Button
            android:id="@+id/btnGer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:text="German"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/filter_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/filter_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_all" />

        <RadioButton
            android:id="@+id/filter_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_breakfast" />

        <RadioButton
            android:id="@+id/filter_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_lunch" />

        <RadioButton
            android:id="@+id/filter_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_dinner" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"/>

</LinearLayout>
